--- a/9.1 Book Manager-update/views/trans/list.pug
+++ b/9.1 Book Manager-update/views/trans/list.pug
@@ -20,15 +20,20 @@ main#main
             th ID Transaction
             th UserName
             th Title
+            th Status
+            th  
         tbody
           each tran in trans
             tr
               td #{tran.id}
               td= users.find(x => x.id === tran.userId).name
               td= books.find(x => x.id === tran.bookId).title
+              td= (tran.isComplete == true)?'Complete' :'Renting'
+              td 
+                a(href="/transaction/edit/"+ tran.id) Edit
 
         tfoot
           tr
-            th(colspan='3')
+            th(colspan='5')
 
 a(href="/transaction/") Back
