--- a/9.1 Book Manager-update/views/book/list_seach_dele.pug
+++ b/9.1 Book Manager-update/views/book/list_seach_dele.pug
@@ -1,13 +1,34 @@
-h1 Delete Book
-br
-P Search book by name
-form(action="/book/search", method="GET")
-    input(type="text",name="q")
-    button Search
-ul
-    each book in books
-        li
-            span= book.title
-            span &nbsp;
-                a(href="/book/delete/"+ book.id) Delete
-a(href="/book/") Back
+extends ../layout/common
+
+block content
+  h1.ui.center.aligned.header List Book In System
+  h4.ui.center.aligned.header 
+      form(action="/book/search", method="GET")
+          span Search book by name
+          span &nbsp &nbsp
+          input(type="text",name="q")
+          span &nbsp &nbsp &nbsp
+          button Search
+  .ui.container
+        table.ui.celled.table.center.aligned
+          thead
+            tr
+              th Book ID
+              th Title
+              th Description
+              th  
+          tbody
+            each book in books
+              tr
+                td= book.id
+                td= book.title
+                td= book.des
+                td 
+                  a(href="/book/detail/"+ book.id) Delete
+
+          tfoot
+            tr
+              th(colspan='4')
+
+
+  a(href="/book/") Back
