--- a/9.1 Book Manager-update/views/trans/list.pug
+++ b/9.1 Book Manager-update/views/trans/list.pug
@@ -1,39 +1,30 @@
-doctype html
-html(lang='en')
-  head
-    title Staff Directory
-    link(rel='stylesheet' href='https://cdn.jsdelivr.net/npm/semantic-ui@2.3.3/dist/semantic.min.css')
-    style.
-      table.ui.celled img { display: inline-block; }
-      footer { margin: 35px 0 15px 0; text-align: center }
+extends ../layout/common
 
-body     
-h1 Manager Transaction In System 
-
-
-main#main
-    h1.ui.center.aligned.header List transaction in system
-    .ui.container
-      table.ui.celled.table.center.aligned
-        thead
-          tr
-            th ID Transaction
-            th UserName
-            th Title
-            th Status
-            th  
-        tbody
-          each tran in trans
+block content
+  h1 Manager Transaction In System 
+  main#main
+      h1.ui.center.aligned.header List transaction in system
+      .ui.container
+        table.ui.celled.table.center.aligned
+          thead
             tr
-              td #{tran.id}
-              td= users.find(x => x.id === tran.userId).name
-              td= books.find(x => x.id === tran.bookId).title
-              td= (tran.isComplete == true)?'Complete' :'Renting'
-              td 
-                a(href="/transaction/edit/"+ tran.id) Edit
+              th ID Transaction
+              th UserName
+              th Title
+              th Status
+              th  
+          tbody
+            each tran in trans
+              tr
+                td #{tran.id}
+                td= users.find(x => x.id === tran.userId).name
+                td= books.find(x => x.id === tran.bookId).title
+                td= (tran.isComplete == true)?'Complete' :'Renting'
+                td 
+                  a(href="/transaction/edit/"+ tran.id) Edit
 
-        tfoot
-          tr
-            th(colspan='5')
+          tfoot
+            tr
+              th(colspan='5')
 
-a(href="/transaction/") Back
+  a(href="/transaction/") Back
