--- a/25.1 Book Manager-update/views/book/list.pug
+++ b/25.1 Book Manager-update/views/book/list.pug
@@ -20,7 +20,7 @@ block content
                             a.btn.btn-primary(href='/cart/add/' + book.id) Add to Cart
 
                 
-        nav(aria-label='Page navigation').mt-4
+        //- nav(aria-label='Page navigation').mt-4
                     ul.pagination.justify-content-center
                         if(current_page == 1  )
                             li.page-item.disabled
