--- a/25.1 Book Manager-update/views/product/index.pug
+++ b/25.1 Book Manager-update/views/product/index.pug
@@ -5,13 +5,13 @@ block content
             each product in products
                 .col-sm-6.col-md-4.col-lg-3
                     .card.mb-3(style='width: 18rem;')
-                        img.card-img-top(src= ''+product.image '', alt='product_img')
+                        img.card-img-top(src= product.image , alt='product_img')
                         .card-body
                             h5.card-title= product.name
                             p.card-text=  product.description
                             a.btn.btn-primary(href='/cart/add/' + product.id) Add to Cart
         
-        nav(aria-label='Page navigation example')
+        //- nav(aria-label='Page navigation example')
             ul.pagination.justify-content-center
                 if(current_page == 1)
                     li.page-item.disabled
